# find-evil

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: README.md
docs/: ACCURACY-REPORT.md  ARCHITECTURE.md  EVIDENCE-DATASET.md  RUN-HANDOFF.md  SUBMISSION.md
docs/adr/: 0001-explicit-state-machine.md  0002-template-command-assembly.md  0003-provenance-required-findings.md  0004-mock-first-executor.md  0005-single-engine-thin-interfaces.md
docs/sample-run/: README.md  evidence-hashes.txt  execution-log.md  report.md
fixtures/sample_case/: README.md  disk.img  memory.mem  mmls.txt  strings.txt  vol_pslist.txt
src/find_evil/: __init__.py
src/find_evil/analysis/: analyzer.py  mitre.py  summary.py  verify.py
src/find_evil/config/: settings.py
src/find_evil/engine/: machine.py  phases.py  schemas.py  state.py
src/find_evil/evidence/: register.py
src/find_evil/interfaces/: cli.py  core.py  mcp.py
src/find_evil/ledger/: store.py
src/find_evil/llm/: factory.py  protocol.py  schema_utils.py
src/find_evil/llm/providers/: __init__.py  anthropic.py  (+2 more)
src/find_evil/report/: pdf.py  reporter.py
src/find_evil/tools/: command.py  executor.py  metadata.yaml
tests/: conftest.py  test_analyzer.py  test_command_assembly.py  test_engine_completion.py  test_engine_full_loop.py  test_evidence.py  test_finding_dedup.py  test_guardrail.py  test_interface_parity.py  test_llm_providers.py  test_mitre.py  test_parsers.py  test_pdf.py  test_provenance.py  test_ssh_executor.py  test_token_accounting.py  test_trust_layer.py
(+9 files in other folders)
